# MCITlib

./: README.md  eval_all_models_ucit.sh
InternVL/CL-MoE/: .env  task.txt  value_counts_DCL_RS.txt  value_counts_UCIT_Arxiv.txt  value_counts_UCIT_Icon.txt  value_counts_UCIT_ImgNet.txt  value_counts_UCIT_VizWiz.txt
InternVL/CL-MoE/llava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
InternVL/DISCO/: .env
InternVL/HiDe/llava.egg-info/: top_level.txt
InternVL/LoRA-FT/llava.egg-info/: SOURCES.txt  requires.txt
InternVL/LoRA-FT/scripts/: merge_lora_weights.py
InternVL/MoELoRA/llava.egg-info/: SOURCES.txt  top_level.txt
InternVL/SEFE/llava.egg-info/: SOURCES.txt
InternVL/SEFE/scripts/: merge_lora_weights.py
LLaVA/CL-MoE/: task.txt  value_counts_UCIT_Arxiv.txt  value_counts_UCIT_CLEVR.txt  value_counts_UCIT_Icon.txt  value_counts_UCIT_ImgNet.txt  value_counts_UCIT_VizWiz.txt
LLaVA/DISCO/: pyproject.toml
LLaVA/DISCO/llava/eval/: eval_caption.py
LLaVA/DISCO/llava/model/: builder.py
LLaVA/DISCO/llava/model/language_model/: llava_llama.py
LLaVA/DISCO/llava/model/language_model/mpt/: hf_prefixlm_converter.py
LLaVA/DISCO/llava/train/: llava_trainer.py  train_MOE.py  train_mem_MOE.py
LLaVA/DISCO/scripts/MCITlib/Eval_MLLM_ACL/: Eval_finetune1.sh
LLaVA/DISCO/scripts/MCITlib/Eval_MLLM_DCL/: Eval_finetune1.sh
LLaVA/DISCO/scripts/MCITlib/Eval_UCIT/: Eval_finetune1.sh
LLaVA/DISCO/scripts/MCITlib/Train/: train_ACL.sh  train_ACL.sh.cursor-20250129-0000  train_DCL.sh  train_UCIT.sh
LLaVA/HiDe/: pyproject.toml
LLaVA/HiDe/scripts/: zero2.json
LLaVA/ModalPrompt/: .env
LLaVA/OLoRA/: pyproject.toml
LLaVA/SEFE/: key_elements_identification.py  pyproject.toml
configs/modal_configs/: internvl.json  llava.json
examples/: config.json
(+1187 files in other folders)
