[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.1.3"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    # --- Core Deep Learning Stack (H100 optimized) ---
    "torch==2.4.0",                     # CUDA 12.1 build (H100 native kernels)
    "torchvision==0.19.0",
    "transformers==4.37.2",
    "tokenizers>=0.15,<0.20",
    "sentencepiece==0.2.0",
    "accelerate==0.30.0",
    "peft==0.10.0",
    "bitsandbytes==0.43.1",             # H100 fully supported
    "deepspeed==0.15.1",                # torch 2.4 compatibility

    # --- Utility / Core dependencies ---
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "pydantic>=2,<3",
    "markdown2[all]",
    "requests",
    "httpx==0.27.0",
    "uvicorn",
    "fastapi",
    "validators",

    # --- Visualization / Interface ---
    "gradio==4.44.0",
    "gradio_client>=0.11.0",

    # --- Miscellaneous Tools ---
    "openpyxl",
    "xlsxwriter",
    "shortuuid",
    "einops==0.7.0",
    "einops-exts==0.0.4",
    "timm==1.0.3",
]

[project.optional-dependencies]
train = [
    "ninja",
    "wandb",
]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]